# libsafecrypto

./: .gitattributes  .gitignore  LICENSE  Makefile.am  README.md  aminclude.am  autogen.sh  configure.ac  huffman.m  huffman_sampler.m  pre-commit.in  setup_version.sh.in  style_info.sh  style_rules.sh  version
bindings/: Makefile.am
bindings/c++/: Makefile.am  SAFEcrypto.cpp  SAFEcrypto.hpp  Test.cpp
bindings/helloworld/: Makefile.am  config.xml  main.c
bindings/strongswan/: Makefile.am  safecrypto_params.c  safecrypto_params.h  safecrypto_plugin.c  safecrypto_plugin.h  safecrypto_private_key.c  safecrypto_private_key.h  safecrypto_public_key.c  safecrypto_public_key.h
build_tools/ntt_table_gen/: Makefile.am  main.c  ntt_table_gen.sh.in
src/: Makefile.am  readme.dox  safecrypto.c  safecrypto_ake.c  safecrypto_ake.h  safecrypto_check.c  safecrypto_check.h  safecrypto_debug.c  safecrypto_debug.h  safecrypto_error.c  safecrypto_error.h  safecrypto_params.c  safecrypto_params.h  safecrypto_private.c  safecrypto_private.h  safecrypto_timer.c  safecrypto_timer.h
src/schemes/: Makefile.am
src/schemes/dh/: Makefile.am
src/schemes/dh/ecdh/: Makefile.am  ecdh.c  ecdh.h
src/schemes/enc/: Makefile.am
src/schemes/enc/kyber/: Makefile.am  kyber_enc.c  kyber_enc.h  kyber_enc_params.c  kyber_enc_params.h
src/schemes/enc/rlwe_enc/: Makefile.am  rlwe_enc.c  rlwe_enc.h  rlwe_enc_params.c  rlwe_enc_params.h
src/schemes/helloworld/: Makefile.am  helloworld.c  helloworld.h
src/schemes/ibe/: Makefile.am
src/schemes/ibe/dlp/: Makefile.am  dlp_ibe.c  dlp_ibe.h  dlp_ibe_params.c  dlp_ibe_params.h
src/schemes/kem/: Makefile.am
src/schemes/kem/ens/: Makefile.am  ens_kem.c  ens_kem.h  ens_kem_params.c  ens_kem_params.h
src/schemes/kem/hw_test/: Makefile.am  hw_test_kem.c  hw_test_kem.h  hw_test_kem_params.c  hw_test_kem_params.h
src/schemes/kem/kyber/: Makefile.am  kyber_kem.c  kyber_kem.h  kyber_kem_params.c  kyber_kem_params.h
src/schemes/sig/: Makefile.am
src/schemes/sig/bliss_b/: Makefile.am  bliss_b.c  bliss_b.h  bliss_bac.c  bliss_bac.h  bliss_huffman_static.c  bliss_huffman_static.h  bliss_params.c  bliss_params.h  bliss_raw.c  bliss_raw.h
src/schemes/sig/dilithium/: Makefile.am  dilithium.c  dilithium.h  dilithium_params.c  dilithium_params.h
src/schemes/sig/ecdsa/: Makefile.am  ecdsa.c  ecdsa.h
src/schemes/sig/ens_dlp/: Makefile.am  ens_dlp_sig.c  ens_dlp_sig.h  ens_dlp_sig_params.c  ens_dlp_sig_params.h
src/schemes/sig/falcon/: Makefile.am  falcon-sign.c  falcon.c  falcon.h  falcon_params.c  falcon_params.h  split_and_merge.c  split_and_merge.h
src/schemes/sig/ring_tesla/: Makefile.am  random_oracle.c  random_oracle.h  ring_tesla.c  ring_tesla.h  ring_tesla_params.c  ring_tesla_params.h
src/unit/: Makefile.am  unit_bac.c  unit_bliss_b.c  unit_dilithium.c  unit_ecc.c  unit_ens_kem.c  unit_entropy.c  unit_exp_golomb.c  unit_gpv.c  unit_huffman.c  unit_limb.c  unit_module_lwe.c  unit_ntt.c  unit_packer.c  unit_pipe.c  unit_poly_16.c  unit_poly_32.c  unit_poly_dbl.c  unit_poly_fft.c  unit_poly_flt.c  unit_poly_limb.c  unit_poly_mpf.c  unit_poly_z2.c  unit_ring_tesla.c  unit_rlwe_enc.c  unit_safecrypto.c  unit_safecrypto_debug.c  unit_safecrypto_error.c  unit_safecrypto_params.c  unit_sampling.c  unit_sc_math.c  unit_sc_mp.c  unit_sc_mpf.c  unit_sc_mpz.c  unit_sc_poly_mpz.c  unit_secret_bits.c  unit_threadpool.c  unit_vectors.c
src/unit/crypto/: Makefile.am  unit_ctr_drbg.c  unit_hash.c  unit_hash_drbg.c  unit_prng.c  unit_sha2.c  unit_xof.c
src/utils/: Makefile.am
src/utils/arith/: Makefile.am  arith.c  arith.h  falcon-keygen.c  falcon.h  falcon_fft.c  falcon_fft.h  falcon_keygen.c  falcon_keygen.h  falcon_ldl.c  falcon_ldl.h  fpr-double.h  gen_ntt.sh  gpv.c  gpv.h  internal.h  ldl.c  limb.c  limb.h  limb_base.c  limb_base.h  module_lwe.c  module_lwe.h  next_prime.c  next_prime.h  ntt.c  ntt.h  ntt_template.c.in  ntt_template.h.in  poly_16.c  poly_16.h  poly_32.c  poly_32.h  poly_fft.c  poly_fft.h  poly_limb.c  poly_limb.h  poly_z2.c  poly_z2.h  roots_of_unity.c  (+19 more)
src/utils/crypto/: Makefile.am  aes_ctr_stream.c  aes_ctr_stream.h  chacha20_csprng.c  chacha20_csprng.h  configure.ac  ctr_drbg.c  ctr_drbg.h  hash.c  hash.h  hash_drbg.c  hash_drbg.h  isaac_csprng.c  isaac_csprng.h  kiss.c  kiss.h  prng.c  prng.h  prng_get_func.c  prng_get_func.h  prng_types.c  prng_types.h  salsa20_csprng.c  salsa20_csprng.h  xof.c  xof.h
src/utils/crypto/aes/: aesopt.h  brg_endian.h
src/utils/crypto/aes256ctr/: crypto_stream_aes256ctr.c  crypto_stream_aes256ctr.h
src/utils/ecc/: Makefile.am  ecc.c  ecc.h  secret_bits.c  secret_bits.h
src/utils/entropy/: Makefile.am  bac.c  bac.h  entropy.c  entropy.h  entropy_huffman.c  entropy_huffman.h  entropy_raw.c  entropy_raw.h  exp_golomb.c  exp_golomb.h  huffman.c  huffman.h  packer.c  packer.h
src/utils/sampling/: Makefile.am  gaussian_bac.c  gaussian_bac.h  gaussian_bernoulli.c  gaussian_bernoulli.h  gaussian_cdf.c  gaussian_cdf.h  gaussian_huffman.c  gaussian_huffman.h  gaussian_knuth_yao.c  gaussian_knuth_yao.h  gaussian_knuth_yao_fast.c  gaussian_knuth_yao_fast.h  mw_bootstrap.c  mw_bootstrap.h  sampling.c  sampling.h
src/utils/threading/: Makefile.am  pipe.c  pipe.h  threading.c  threading.h  threadpool.c  threadpool.h
test/functional/: Makefile.am  func_alg_2way_ake.c  func_alg_bliss_b.c  func_alg_dilithium.c  func_alg_dilithium_g.c  func_alg_dlp_ibe.c  func_alg_dlp_sig.c  func_alg_dlp_sig_recovery.c  func_alg_ecdh.c  func_alg_ecdsa.c  func_alg_ens_kem.c  func_alg_ens_sig.c  func_alg_ens_sig_recovery.c  func_alg_falcon  func_alg_falcon.c  func_alg_falcon_sig.c  func_alg_kyber_enc.c  func_alg_kyber_kem.c  func_alg_ring_tesla.c  func_alg_rlwe_enc.c  func_csprng.c  func_falcon_sig.c  func_fft_falcon.c  func_hash_comparison.c  func_ibe_test.c  func_ntt.c  func_poly_limb_divrem_mod.c  func_poly_limb_mul.c  func_poly_mpi_mul.c  func_safecrypto.c  func_samplers.c  func_sc_math.c  func_signatures_schemes.c  func_threading.c  func_xof_comparison.c
test/kat/: Makefile.am  kat_ecdh_secp256r1.c  kat_hash_drbg.c
(+110 files in other folders)
